--- a/registro.html
+++ b/registro.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="CSS/Style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pagina web</title>
 </head>
 <body>
+    <div
+    class="form_login">
+    <form>
+
+        <h1>Registro</h1>
         <label for="">Nombre</label>
         <input type="text" placeholder="Nombre" value="" name="txtNombre">
         <label for="">Contacto</label>
@@ -17,6 +23,8 @@
         <input type="text" placeholder="Código">
         <button type="submit">Enviar</button>
         <a href="index.html">Volver</a>
+    </form>
         
+    </div>
 </body>
 </html>
