--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <h1>Ingreso</h1>
             <label id="label_inicio" for="">Correo</label>
             <input type="text" placeholder="Correo">
-            <label id="label_inicio" for="">Contraseña</label>
+            <label id="label_inicio" for="">Password</label>
             <input type="text" placeholder="Contraseña">
             <input id="label_inicio" type="submit" value="Ingresar">
             <p>¿No te has registrado? <a href="registro.html">Regístrate</a></p>
