Cambios de diseño

--- a/registro.html
+++ b/registro.html
@@ -8,8 +8,8 @@
     <title>Pagina web</title>
 </head>
 <body>
-    <div
-    class="form_login">
+    <div class="form_login">
+    <img class="logo" src="img/key.png" alt="Logo">
     <form>
 
         <h1>Registro</h1>
@@ -20,7 +20,7 @@
         <label for="">Correo</label>
         <input type="text" placeholder="Correo" value="" name="txtCorreo">
         <label for="">Código</label>
-        <input type="text" placeholder="Código">
+        <label value="2" name="txtCodigo">
         <button type="submit">Enviar</button>
         <a href="index.html">Volver</a>
     </form>
