--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <div class="form_login">
         <img class="logo" src="img/key.png" alt="Logo">
 
-        <form >
+        <form>
             <h1>Ingreso</h1>
             <label id="label_inicio" for="">Correo</label>
-            <input type="text" placeholder="Correo">
+            <input type="text" placeholder="">
             <label id="label_inicio" for="">Password</label>
-            <input type="text" placeholder="Contraseña">
+            <input type="text" placeholder="">
             <input id="label_inicio" type="submit" value="Ingresar">
             <p>¿No te has registrado? <a href="registro.html">Regístrate</a></p>
         </form>
