Modificación Visual de las páginas

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
             <input type="text" placeholder="">
             <label id="label_inicio" for="">Password</label>
             <input type="text" placeholder="">
-            <input id="label_inicio" type="submit" value="Ingresar">
+            <button class="enviar">Ingresar</button>
+            <!--<input id="label_inicio" type="submit" value="Ingresar">-->
             <p>¿No te has registrado? <a href="registro.html">Regístrate</a></p>
         </form>
         
