--- a/apostar.html
+++ b/apostar.html
@@ -15,14 +15,14 @@
 
                 
                 <h1>Apuesta</h1>
-                <label  for="">Nombre</label>
-                    <input type="text" placeholder="Nombre" value="" name="txtNombre"> <br>
-                    <label for="">Numero de tarjeta</label>
-                    <input type="text" placeholder="Contacto" value="" name="txtContacto"> <br>
-                    <label for="">Fecha de Vencimiento</label>
-                    <input type="date" placeholder="Correo" value="" name="txtCorreo"> <br>
-                    <label for="">Contraseña</label>
-                    <input type="text" placeholder="Codigo" value="" name="txtCodigo"> <br>
+                    <label class="label_id" for="">Nombre</label>
+                    <input class="input_apuesta" type="text" placeholder="Nombre" value="" name="txtNombre"> <br>
+                    <label class="label_id" for="">Numero de tarjeta</label>
+                    <input class="input_apuesta" type="text" placeholder="Contacto" value="" name="txtContacto"> <br>
+                    <label class="label_id" for="">Fecha de Vencimiento</label>
+                    <input class="input_apuesta" type="date" placeholder="Correo" value="" name="txtCorreo"> <br>
+                    <label class="label_id" for="">Contraseña</label>
+                    <input class="input_apuesta" type="text" placeholder="Codigo" value="" name="txtCodigo"> <br>
                     <button class="tarjeta"  type="submit">Enviar</button>
                
         </form>
